[package]
name = "snorestop"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "libloaderapi", "consoleapi", "winnt", "sysinfoapi", "wincon"] }
nodejs = "0.2.1"
paste = "1.0.5"
libloading = "0.7.0"

[build-dependencies]
cmake = "0.1.45"