[package]
name = "snorestop"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "libloaderapi", "consoleapi", "winnt", "sysinfoapi", "wincon", "processthreadsapi", "memoryapi", "vadefs"] }
nodejs = { path = "../../rust-nodejs" }
napi-sys = { version = "1.1.1", features = [ "napi7" ]}
paste = "1.0.5"
detour = "0.8.1"